--- a/style.css
+++ b/style.css
@@ -1,58 +1,28 @@
-/*.container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-h1{
-    font-family: fantasy;
-    font-size: 3em;
-    b
-}
-img{
-width: 450px;
-height: 300px;
-margin: 10px;
-transition: all 1s;
-}
-
-img:hover{
-    transform: scale(1.1)
-}
-
 
 body {
-	margin: 0px;
-}*/
-
-.container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	font: 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .5em;
+    top: 15%;
+	background: linear-gradient(to right, red , yellow); /* Standard syntax */
 }
 
 h1 {
-	font-family: fantasy;
-	font-size: 3em;
-	border-bottom: 2px solid pink;
-	border-right: 2px solid pink;
-	width: 400px;
-	text-align: center;
-	-moz-box-shadow:4px 4px 5px #888888;
-	-ms-box-shadow: 4px 4px 5px #888888;
-	-webkit-box-shadow: 4px 4px 5px #888888;
-	-o-box-shadow: 4px 4px 5px #888888;
-	box-shadow: 4px 4px 5px #888888;
-	margin-top: 10px;
+    font: 600 3.5em 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .5em;
+    width: 100%;
 }
 
-img {
-	width: 600px;
-	height: 400px;
-	margin: 10px;
-	transition: all 1s;
-}
+h3 {
+	font: 900 1em 'Raleway', sans-serif;
+    color: rgba(0,0,0,.5);
+    text-align: center;
+    text-transform: none;
+    letter-spacing: 0.01em;
 
-img:hover {
-	transform: scale(1.1);
 }
