--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,12 @@ img { max-width: 100%; height: auto; display: block; }
 }
 
 
+a {
+    color: #99c2b5;
+    text-decoration: none;
+    transition: color .1s, background-color .1s;
+}
+
 
 
 
